[gd_scene load_steps=52 format=3 uid="uid://ofshufq347fb"]

[ext_resource type="Texture2D" uid="uid://de2tpgcubddv7" path="res://assets/ui/buttons/buttons_square/11_right_arrow.png" id="1"]
[ext_resource type="Script" path="res://src/scene/extras/Extras.gd" id="1_4cv60"]
[ext_resource type="Texture2D" uid="uid://g2mqt37cwxlk" path="res://assets/spaceships/mains/planes_07_A.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cqykfi53q5iv8" path="res://assets/spaceships/mains/planes_02_A 1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ca60ndlhbmj8q" path="res://assets/spaceships/mains/planes_05_A.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c03yswlf0crlv" path="res://assets/spaceships/mains/planes_01_A 1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bi4dd4qn2tux7" path="res://assets/spaceships/mains/planes_08_A.png" id="6"]
[ext_resource type="Texture2D" uid="uid://d3jwxpn11slkn" path="res://assets/spaceships/mains/planes_04_A.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cm6q3vtyt6soy" path="res://assets/spaceships/mains/planes_06_A.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bfd8a2ysg076c" path="res://assets/spaceships/mains/planes_03_A 1.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bxbxdypqdr2jn" path="res://assets/ui/buttons/buttons_square/11_right_arrow_pick.png" id="11"]

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("3")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("3")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("3")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("3")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("7")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="21"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("10")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("10")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("10")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("10")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}, {
"duration": 1.0,
"texture": SubResource("14")
}, {
"duration": 1.0,
"texture": SubResource("15")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("4")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource("4")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("4")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("4")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("22")
}, {
"duration": 1.0,
"texture": SubResource("23")
}, {
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("8")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("8")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("8")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("8")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("2")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("2")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("2")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("2")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="36"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("6")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("6")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("6")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource("6")
region = Rect2(288, 0, 96, 96)

[sub_resource type="SpriteFrames" id="41"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}, {
"duration": 1.0,
"texture": SubResource("40")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="Extras" type="Node2D"]
script = ExtResource("1_4cv60")

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 2048.0

[node name="Ship1" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(321, 320)
scale = Vector2(4, 4)
sprite_frames = SubResource("6")

[node name="Ship2" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(832, 320)
scale = Vector2(4, 4)
sprite_frames = SubResource("11")

[node name="Ship3" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(320, 768)
scale = Vector2(4, 4)
sprite_frames = SubResource("21")

[node name="Ship4" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(832, 768)
scale = Vector2(4, 4)
sprite_frames = SubResource("16")

[node name="Ship5" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(320, 1216)
scale = Vector2(4, 4)
sprite_frames = SubResource("26")

[node name="Ship6" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(832, 1216)
scale = Vector2(4, 4)
sprite_frames = SubResource("31")

[node name="Ship7" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(320, 1664)
scale = Vector2(4, 4)
sprite_frames = SubResource("36")

[node name="Ship8" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
position = Vector2(832, 1664)
scale = Vector2(4, 4)
sprite_frames = SubResource("41")

[node name="BackButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -192.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("1")
texture_pressed = ExtResource("11")
stretch_mode = 5

[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
